@@ -35,8 +35,9 @@ http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 
 #include "Constraints/OgreBulletDynamicsRaycastVehicle.h"
 
-#include "GIMPACT/Bullet/btGImpactShape.h"
-#include "GIMPACT/Bullet/btGImpactCollisionAlgorithm.h"
+#include "Gimpact/btGImpactShape.h"
+#include "Gimpact/btGImpactCollisionAlgorithm.h"
+
 
 using namespace Ogre;
 using namespace OgreBulletCollisions;
